confirm eval bug fixed, fix split token

--- a/poker/index.html
+++ b/poker/index.html
@@ -247,7 +247,7 @@
                 console.log('receive alert')
                 window.alert(evalMsg);
                 console.log('alert message closed');
-                console.log('display and collect');
+                console.log('display and collect', collectTokenValues);
                 if (collectTokenValues.length !== 0){
                     // Set up collect and clear token listener
                     player.collectBtn.classList.toggle('clickable');
