setup exchange feature

--- a/poker/index.html
+++ b/poker/index.html
@@ -124,7 +124,7 @@
             // make tokens always exchangeable
             player.exchBtn.addEventListener('click', ()=>{
                 console.log('exchange action called');
-                plauer.makeExchange();
+                player.makeExchange();
             });
             player.exchBtn.classList.toggle('clickable');
 
